--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jonathan Doe.</h1>
+            <h1 class="responsive-headline">I'm João Afonso.</h1>
             <h3>I'm a Portugal based <span>Data Scientist</span> and dog lover, with Biomedical Engineering roots, working in <span>MedTech</span> during the day and in <span>Sustainability</span> at night. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
