--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm João Afonso.</h1>
-            <h3>I'm a Portugal based <span>Data Scientist</span> and dog lover, with Biomedical Engineering roots, working in <span>MedTech</span> during the day and in <span>Sustainability</span> at night. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm a Portugal based <span>Data Scientist</span> with Biomedical Engineering roots working in <span>MedTech</span> during the day and in <span>Sustainability</span> at night. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -89,12 +89,10 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>Fast-paced data scientist, experienced in data analysis, machine learning, statistics and cloud computing. 
+            Despite currently having a technical role, my mindset is always focused on the product and the business. 
+            Apart from my daily job, I develop data-driven solutions towards a more sustainable world. 
+            Outside work, I consider myself a dog lover, a gym rat and a guitarist.
             </p>
 
             <div class="row">
