--- a/index.html
+++ b/index.html
@@ -175,13 +175,10 @@
                <div class="twelve columns">
 
                   <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <p class="info">Data Scientist <span>&bull;</span> <em class="date">April 2021 - Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Fast-paced and growing startup that combines photonics with artificial intelligence for healthcare applications. Working in analytics, machine learning, software development (Python) and clound computing projects. Some are internal, other are being developed with external partners, including international companies. 
                   </p>
 
                </div>
