--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
+                  <h3>iLoF - Intelligent Lab on Fiber</h3>
                   <p class="info">Data Scientist <span>&bull;</span> <em class="date">April 2021 - Present</em></p>
 
                   <p>
-                  Fast-paced and growing startup that combines photonics with artificial intelligence for healthcare applications. Working in analytics, machine learning, software development (Python) and clound computing projects. Some are internal, other are being developed with external partners, including international companies. 
+                  I am currently working in analytics, machine learning, software development (Python) and clound computing projects. Some internal, other developed with external partners, including international companies. Also, I am part of a team dedicated to improve the culture and some HR processes of the company.
                   </p>
 
                </div>
@@ -189,19 +189,31 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>SHARKCODERS</h3>
+                  <p class="info">Coding Teacher<span>&bull;</span> <em class="date">October 2021 - March 2022</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                    Taught programming and Python to young students, from beginner to advanced level. Helped in the design of a Python course dedicated to older students, including lessons about AI, image processing and automation.
                   </p>
 
                </div>
 
             </div> <!-- item end -->
+
+            <div class="row item">
+
+                <div class="twelve columns">
+ 
+                   <h3>ANOVA</h3>
+                   <p class="info">Data Scientist & Product Owner<span>&bull;</span> <em class="date">September 2020 - April 2021</em></p>
+ 
+                   <p>
+                     I worked in a novel data-driven product related to IoT and monitoring, where I was responsible for the entire automation of the algorithm, databases management, product's performance evaluation with analytics. In parallel, I helped represent the product in meetings with other teams in the company.
+                   </p>
+ 
+                </div>
+ 
+             </div> <!-- item end -->
 
          </div> <!-- main-col end -->
 
