--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                    <p class="info">Data Scientist & Product Owner<span>&bull;</span> <em class="date">September 2020 - April 2021</em></p>
  
                    <p>
-                     I worked in a novel data-driven product related to IoT and monitoring, where I was responsible for the entire automation of the algorithm, databases management, product's performance evaluation with analytics. In parallel, I helped represent the product in meetings with other teams in the company.
+                     I worked in a novel data-driven product related to IoT and monitoring, where I was responsible for the entire automation of the algorithm, management of the main database and the performance evaluation of the product with analytics. In parallel, I helped represent the product in meetings with other teams in the company.
                    </p>
  
                 </div>
