--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-						<li><span class="bar-expand css"></span><em>CSS</em></li>
-						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+					   <li><span class="bar-expand analytics"></span><em>Data Science & Analytics</em></li>
+                  <li><span class="bar-expand AI"></span><em>Artificial Intelligence</em></li>
+						<li><span class="bar-expand stats"></span><em>Statistics</em></li>
+						<li><span class="bar-expand cloud"></span><em>Cloud Computing</em></li>
+						<li><span class="bar-expand python"></span><em>Python</em></li>
+                  <li><span class="bar-expand SQL"></span><em>SQL</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
