--- a/index.html
+++ b/index.html
@@ -230,16 +230,13 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p>Altough most of
             </p>
 
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand analytics"></span><em>Data Science & Analytics</em></li>
+					   <li><span class="analytics"></span><em>Data Science & Analytics</em></li>
                   <li><span class="bar-expand AI"></span><em>Artificial Intelligence</em></li>
 						<li><span class="bar-expand stats"></span><em>Statistics</em></li>
 						<li><span class="bar-expand cloud"></span><em>Cloud Computing</em></li>
