--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="analytics"></span><em>Data Science & Analytics</em></li>
+					   <li><span class="bar-expand analytics"></span><em>Data Science & Analytics</em></li>
                   <li><span class="bar-expand AI"></span><em>Artificial Intelligence</em></li>
 						<li><span class="bar-expand stats"></span><em>Statistics</em></li>
 						<li><span class="bar-expand cloud"></span><em>Cloud Computing</em></li>
