--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
          <div class="nine columns main-col">
 
-            <p>Altough most of
+            <p>Although my roles are mostly technical, I have always been placed in areas more focused on the product and the business, making me sensitive to the balance between the technology and the customer's needs. Also, having represented my companies on many occasions and actively participated in the planning of various projects, I feel very comfortable with both communication and project organization.
             </p>
 
 				<div class="bars">
