--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
 
 				   <ul class="skills">
 					   <li><span class="bar-expand analytics"></span><em>Data Science & Analytics</em></li>
-                  <li><span class="bar-expand AI"></span><em>Artificial Intelligence</em></li>
+                  <li><span class="bar-expand artificial"></span><em>Artificial Intelligence</em></li>
 						<li><span class="bar-expand stats"></span><em>Statistics</em></li>
 						<li><span class="bar-expand cloud"></span><em>Cloud Computing</em></li>
 						<li><span class="bar-expand python"></span><em>Python</em></li>
-                  <li><span class="bar-expand SQL"></span><em>SQL</em></li>
+                  <li><span class="bar-expand sql"></span><em>SQL</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
