--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
          <div class="nine columns main-col">
 
-            <p>Despite my work being mostly technical, my roles have always been in areas more focused on the product and business, having to balance between R&D and customer's needs. Also, having represented my companies on many occasions and actively participated in the planning of various projects, I feel very comfortable with both communication and organization. Regarding techincal skills, these are the most relevant, for now:
+            <p>Despite my work being mostly technical, my roles have always been in areas more focused on the product and business, having to balance between R&D and customer's needs. Also, having represented my companies on many occasions and actively participated in the planning of various projects, I feel very comfortable with both communication and work organization. Regarding techincal skills, these are the most relevant, for now:
             </p>
 
 				<div class="bars">
