--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 
          <div class="seven columns">
 
-            <h2><span class="lead">Unde Omnis Iste</span></h2>
+            <h2><span class="lead">My DNA outside work</span></h2>
             <p><span class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
             eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae. </span></p>
 
