--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-07" title="">
-                        <img alt="" src="images/portfolio/origami.jpg">
+                        <img alt="" src="images/portfolio/2.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Origami</h5>
-                              <p>Illustrration</p>
+          					      <h5>Battleship with GUI in Python</h5>
+                              <p>Software</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -389,11 +389,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-08" title="">
-                        <img alt="" src="images/portfolio/retrocam.jpg">
+                        <img alt="" src="images/portfolio/1.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Retrocam</h5>
-                              <p>Web Development</p>
+          					      <h5>Battleship game in Python</h5>
+                              <p>Software</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -517,7 +517,7 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/2.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Origami</h4>
+			      <h4>Battleship with GUI in Python</h4>
 			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                <span class="categories"><i class="fa fa-tag"></i>Branding, Illustration</span>
 		      </div>
@@ -534,7 +534,7 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/1.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Retrocam</h4>
+			      <h4>Battleship game in Python</h4>
 			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                <span class="categories"><i class="fa fa-tag"></i>Webdesign, Photography</span>
 		      </div>
