--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/9.jpg">
+                     <a href="#modal-10" title="">
+                        <img alt="" src="images/portfolio/10.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Identification of ecological dark corridors for bats in Bristol</h5>
@@ -286,7 +286,7 @@
                 <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-02" title="">
+                     <a href="#modal-09" title="">
                         <img alt="" src="images/portfolio/9.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -303,7 +303,7 @@
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-01" title="">
+                     <a href="#modal-08" title="">
                         <img alt="" src="images/portfolio/8.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -320,7 +320,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-02" title="">
+                     <a href="#modal-07" title="">
                         <img alt="" src="images/portfolio/7.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -337,7 +337,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-03" title="">
+                     <a href="#modal-06" title="">
                         <img alt="" src="images/portfolio/6.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -354,7 +354,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-04" title="">
+                     <a href="#modal-05" title="">
                         <img alt="" src="images/portfolio/5.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -371,7 +371,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-05" title="">
+                     <a href="#modal-04" title="">
                         <img alt="" src="images/portfolio/4.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -388,7 +388,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-06" title="">
+                     <a href="#modal-03" title="">
                         <img alt="" src="images/portfolio/3.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -405,7 +405,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-07" title="">
+                     <a href="#modal-02" title="">
                         <img alt="" src="images/portfolio/2.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -422,7 +422,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-08" title="">
+                     <a href="#modal-01" title="">
                         <img alt="" src="images/portfolio/1.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -444,12 +444,12 @@
          <!-- Modal Popup
 	      --------------------------------------------------------------- -->
 
-         <div id="modal-01" class="popup-modal mfp-hide">
+         <div id="modal-10" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/10.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Coffee Cup</h4>
+			      <h4>Identification of ecological dark corridors for bats in Bristol</h4>
 			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 		      </div>
@@ -459,11 +459,11 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-01 End -->
+	      </div><!-- modal-10 End -->
 
-         <div id="modal-02" class="popup-modal mfp-hide">
+         <div id="modal-09" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/9.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4>Console</h4>
@@ -476,14 +476,14 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-02 End -->
+	      </div><!-- modal-09 End -->
 
-         <div id="modal-03" class="popup-modal mfp-hide">
+         <div id="modal-08" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/8.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Judah</h4>
+			      <h4>Identification of ecological dark corridors for bats in Bristol</h4>
 			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                <span class="categories"><i class="fa fa-tag"></i>Branding</span>
 		      </div>
@@ -493,14 +493,65 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-03 End -->
+	      </div><!-- modal-08 End -->
+
+         <div id="modal-07" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/modals/7.jpg" alt="" />
+
+		      <div class="description-box">
+			      <h4>Optimization of Soft-Mobility Drop-off Points in Porto</h4>
+			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+		      </div>
+
+            <div class="link-box">
+               <a href="http://www.behance.net" target="_blank">Details</a>
+		         <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+	      </div><!-- modal-07 End -->
+
+         <div id="modal-06" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/modals/6.jpg" alt="" />
+
+		      <div class="description-box">
+			      <h4>Predicting a safety score for women in Costa Rica</h4>
+			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+		      </div>
+
+            <div class="link-box">
+               <a href="http://www.behance.net" target="_blank">Details</a>
+		         <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+	      </div><!-- modal-06 End -->
+
+         <div id="modal-05" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/modals/5.jpg" alt="" />
+
+		      <div class="description-box">
+			      <h4>Optimizing Austin's waste management and collection</h4>
+			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+		      </div>
+
+            <div class="link-box">
+               <a href="http://www.behance.net" target="_blank">Details</a>
+		         <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+	      </div><!-- modal-05 End -->
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/5.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Into the Light</h4>
+			      <h4>Promoting Matosinhos' transition to soft-mobility</h4>
 			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                <span class="categories"><i class="fa fa-tag"></i>Photography</span>
 		      </div>
@@ -512,29 +563,12 @@
 
 	      </div><!-- modal-04 End -->
 
-         <div id="modal-05" class="popup-modal mfp-hide">
+         <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-farmerboy.jpg" alt="" />
-
-		      <div class="description-box">
-			      <h4>Farmer Boy</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
-		      </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-	      </div><!-- modal-05 End -->
-
-         <div id="modal-06" class="popup-modal mfp-hide">
-
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-girl.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/3.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Girl</h4>
+			      <h4>Bird Sound Generator</h4>
 			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                <span class="categories"><i class="fa fa-tag"></i>Photography</span>
 		      </div>
@@ -544,9 +578,9 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-06 End -->
+	      </div><!-- modal-03 End -->
 
-         <div id="modal-07" class="popup-modal mfp-hide">
+         <div id="modal-02" class="popup-modal mfp-hide">
 
 		      <img class="scale-with-grid" src="images/portfolio/modals/2.jpg" alt="" />
 
@@ -561,9 +595,9 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-07 End -->
+	      </div><!-- modal-02 End -->
 
-         <div id="modal-08" class="popup-modal mfp-hide">
+         <div id="modal-01" class="popup-modal mfp-hide">
 
 		      <img class="scale-with-grid" src="images/portfolio/modals/1.jpg" alt="" />
 
