--- a/index.html
+++ b/index.html
@@ -266,57 +266,6 @@
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 
-                <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-09" title="">
-                        <img alt="" src="images/portfolio/9.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-          					      <h5>Predicting a safety score for women in Costa Rica</h5>
-                              <p>Data Science</p>
-          					   </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-          		</div> <!-- item end -->
-
-          	   <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-08" title="">
-                        <img alt="" src="images/portfolio/8.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-          					      <h5>Optimization of Soft-Mobility Drop-off Points in Porto</h5>
-                              <p>Data Science</p>
-          					   </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-          		</div> <!-- item end -->
-
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-07" title="">
-                        <img alt="" src="images/portfolio/7.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-          					      <h5>Optimizing Austin's waste management and collection</h5>
-                              <p>Data Science</p>
-          					   </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-          		</div> <!-- item end -->
-
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
@@ -324,7 +273,7 @@
                         <img alt="" src="images/portfolio/6.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Promoting Matosinhos' transition to soft-mobility</h5>
+          					      <h5>Projects with holin</h5>
                               <p>Data Science</p>
           					   </div>
                         </div>
