--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
             <p>Fast-paced data scientist, experienced in data analysis, machine learning, statistics and cloud computing. 
             Despite currently having a technical role, my mindset is always focused on the product and the business. 
-            Apart from my daily job, I develop data-driven solutions towards a more sustainable world. 
-            Outside work, I consider myself a dog lover, a gym rat and a guitarist.
+            Apart from my daily job, I develop data-driven solutions towards a more sustainable world, and I won two international data science competitions in this scope. 
+            Outside work, I am a dog lover, a gym rat and a guitarist.
             </p>
 
             <div class="row">
